Pre-compiled/PolicyGrammarParser.java
// Generated from PolicyGrammar.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PolicyGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, CTX=4, DOM=5, PREVIOUS=6, SINCE=7, EPAST=8, GPAST=9, 
		ELEMENT=10, EQU=11, NOT=12, AND=13, OR=14, EXIST=15, ALL=16, IN=17, FLOW=18, 
		IFLOW=19, ID=20, INT=21, NEWLINE=22, WS=23;
	public static final int
		RULE_stat = 0, RULE_policy = 1, RULE_assignment = 2, RULE_formula = 3, 
		RULE_atom = 4, RULE_termctx = 5, RULE_termdom = 6, RULE_var = 7;
	public static final String[] ruleNames = {
		"stat", "policy", "assignment", "formula", "atom", "termctx", "termdom", 
		"var"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'='", "'('", "')'", null, "'users'", null, null, null, null, null, 
		"'EQ'", "'NOT'", "'AND'", "'OR'", "'EXIST'", "'ALL'", "'IN'", null, "'>>'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, "CTX", "DOM", "PREVIOUS", "SINCE", "EPAST", "GPAST", 
		"ELEMENT", "EQU", "NOT", "AND", "OR", "EXIST", "ALL", "IN", "FLOW", "IFLOW", 
		"ID", "INT", "NEWLINE", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PolicyGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PolicyGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StatContext extends ParserRuleContext {
		public List<PolicyContext> policy() {
			return getRuleContexts(PolicyContext.class);
		}
		public PolicyContext policy(int i) {
			return getRuleContext(PolicyContext.class,i);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyGrammarVisitor ) return ((PolicyGrammarVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_stat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(17); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(16);
				policy();
				}
				}
				setState(19); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID || _la==NEWLINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PolicyContext extends ParserRuleContext {
		public PolicyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_policy; }
	 
		public PolicyContext() { }
		public void copyFrom(PolicyContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PrintDecision_methodContext extends PolicyContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(PolicyGrammarParser.NEWLINE, 0); }
		public PrintDecision_methodContext(PolicyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).enterPrintDecision_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).exitPrintDecision_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyGrammarVisitor ) return ((PolicyGrammarVisitor<? extends T>)visitor).visitPrintDecision_method(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Blank_methodContext extends PolicyContext {
		public TerminalNode NEWLINE() { return getToken(PolicyGrammarParser.NEWLINE, 0); }
		public Blank_methodContext(PolicyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).enterBlank_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).exitBlank_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyGrammarVisitor ) return ((PolicyGrammarVisitor<? extends T>)visitor).visitBlank_method(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PolicyContext policy() throws RecognitionException {
		PolicyContext _localctx = new PolicyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_policy);
		try {
			setState(26);
			switch (_input.LA(1)) {
			case ID:
				_localctx = new PrintDecision_methodContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(21);
				assignment();
				setState(23);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(22);
					match(NEWLINE);
					}
					break;
				}
				}
				break;
			case NEWLINE:
				_localctx = new Blank_methodContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(25);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	 
		public AssignmentContext() { }
		public void copyFrom(AssignmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Assign_methodContext extends AssignmentContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public Assign_methodContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).enterAssign_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).exitAssign_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyGrammarVisitor ) return ((PolicyGrammarVisitor<? extends T>)visitor).visitAssign_method(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignment);
		try {
			_localctx = new Assign_methodContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			var();
			setState(29);
			match(T__0);
			setState(30);
			formula(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormulaContext extends ParserRuleContext {
		public FormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula; }
	 
		public FormulaContext() { }
		public void copyFrom(FormulaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Not_methodContext extends FormulaContext {
		public TerminalNode NOT() { return getToken(PolicyGrammarParser.NOT, 0); }
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public Not_methodContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).enterNot_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).exitNot_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyGrammarVisitor ) return ((PolicyGrammarVisitor<? extends T>)visitor).visitNot_method(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Parens_methodContext extends FormulaContext {
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public Parens_methodContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).enterParens_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).exitParens_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyGrammarVisitor ) return ((PolicyGrammarVisitor<? extends T>)visitor).visitParens_method(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class S_methodContext extends FormulaContext {
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public TerminalNode SINCE() { return getToken(PolicyGrammarParser.SINCE, 0); }
		public S_methodContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).enterS_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).exitS_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyGrammarVisitor ) return ((PolicyGrammarVisitor<? extends T>)visitor).visitS_method(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Atom_methodContext extends FormulaContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public Atom_methodContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).enterAtom_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).exitAtom_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyGrammarVisitor ) return ((PolicyGrammarVisitor<? extends T>)visitor).visitAtom_method(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Y_methodContext extends FormulaContext {
		public TerminalNode PREVIOUS() { return getToken(PolicyGrammarParser.PREVIOUS, 0); }
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public Y_methodContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).enterY_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).exitY_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyGrammarVisitor ) return ((PolicyGrammarVisitor<? extends T>)visitor).visitY_method(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Exist_methodContext extends FormulaContext {
		public TerminalNode EXIST() { return getToken(PolicyGrammarParser.EXIST, 0); }
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public TerminalNode IN() { return getToken(PolicyGrammarParser.IN, 0); }
		public TermdomContext termdom() {
			return getRuleContext(TermdomContext.class,0);
		}
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public Exist_methodContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).enterExist_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).exitExist_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyGrammarVisitor ) return ((PolicyGrammarVisitor<? extends T>)visitor).visitExist_method(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class And_methodContext extends FormulaContext {
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public TerminalNode AND() { return getToken(PolicyGrammarParser.AND, 0); }
		public And_methodContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).enterAnd_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).exitAnd_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyGrammarVisitor ) return ((PolicyGrammarVisitor<? extends T>)visitor).visitAnd_method(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class H_methodContext extends FormulaContext {
		public TerminalNode GPAST() { return getToken(PolicyGrammarParser.GPAST, 0); }
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public H_methodContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).enterH_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).exitH_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyGrammarVisitor ) return ((PolicyGrammarVisitor<? extends T>)visitor).visitH_method(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class P_methodContext extends FormulaContext {
		public TerminalNode EPAST() { return getToken(PolicyGrammarParser.EPAST, 0); }
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public P_methodContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).enterP_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).exitP_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyGrammarVisitor ) return ((PolicyGrammarVisitor<? extends T>)visitor).visitP_method(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Or_methodContext extends FormulaContext {
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public TerminalNode OR() { return getToken(PolicyGrammarParser.OR, 0); }
		public Or_methodContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).enterOr_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).exitOr_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyGrammarVisitor ) return ((PolicyGrammarVisitor<? extends T>)visitor).visitOr_method(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class All_methodContext extends FormulaContext {
		public TerminalNode ALL() { return getToken(PolicyGrammarParser.ALL, 0); }
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public TerminalNode IN() { return getToken(PolicyGrammarParser.IN, 0); }
		public TermdomContext termdom() {
			return getRuleContext(TermdomContext.class,0);
		}
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public All_methodContext(FormulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).enterAll_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).exitAll_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyGrammarVisitor ) return ((PolicyGrammarVisitor<? extends T>)visitor).visitAll_method(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormulaContext formula() throws RecognitionException {
		return formula(0);
	}

	private FormulaContext formula(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		FormulaContext _localctx = new FormulaContext(_ctx, _parentState);
		FormulaContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_formula, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			switch (_input.LA(1)) {
			case NOT:
				{
				_localctx = new Not_methodContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(33);
				match(NOT);
				setState(34);
				formula(6);
				}
				break;
			case EXIST:
				{
				_localctx = new Exist_methodContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(35);
				match(EXIST);
				setState(36);
				var();
				setState(37);
				match(IN);
				setState(38);
				termdom();
				setState(39);
				formula(3);
				}
				break;
			case ALL:
				{
				_localctx = new All_methodContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(41);
				match(ALL);
				setState(42);
				var();
				setState(43);
				match(IN);
				setState(44);
				termdom();
				setState(45);
				formula(2);
				}
				break;
			case T__1:
				{
				_localctx = new Parens_methodContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(47);
				match(T__1);
				setState(48);
				formula(0);
				setState(49);
				match(T__2);
				}
				break;
			case PREVIOUS:
				{
				_localctx = new Y_methodContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(51);
				match(PREVIOUS);
				setState(52);
				match(T__1);
				setState(53);
				formula(0);
				setState(54);
				match(T__2);
				}
				break;
			case EPAST:
				{
				_localctx = new P_methodContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(56);
				match(EPAST);
				setState(57);
				match(T__1);
				setState(58);
				formula(0);
				setState(59);
				match(T__2);
				}
				break;
			case GPAST:
				{
				_localctx = new H_methodContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(61);
				match(GPAST);
				setState(62);
				match(T__1);
				setState(63);
				formula(0);
				setState(64);
				match(T__2);
				}
				break;
			case CTX:
			case DOM:
			case ID:
				{
				_localctx = new Atom_methodContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(66);
				atom();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(80);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(78);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new S_methodContext(new FormulaContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_formula);
						setState(69);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(70);
						match(SINCE);
						setState(71);
						formula(10);
						}
						break;
					case 2:
						{
						_localctx = new And_methodContext(new FormulaContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_formula);
						setState(72);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(73);
						match(AND);
						setState(74);
						formula(6);
						}
						break;
					case 3:
						{
						_localctx = new Or_methodContext(new FormulaContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_formula);
						setState(75);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(76);
						match(OR);
						setState(77);
						formula(5);
						}
						break;
					}
					} 
				}
				setState(82);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
	 
		public AtomContext() { }
		public void copyFrom(AtomContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Elem_methodContext extends AtomContext {
		public TerminalNode ELEMENT() { return getToken(PolicyGrammarParser.ELEMENT, 0); }
		public List<TermdomContext> termdom() {
			return getRuleContexts(TermdomContext.class);
		}
		public TermdomContext termdom(int i) {
			return getRuleContext(TermdomContext.class,i);
		}
		public TermctxContext termctx() {
			return getRuleContext(TermctxContext.class,0);
		}
		public Elem_methodContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).enterElem_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).exitElem_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyGrammarVisitor ) return ((PolicyGrammarVisitor<? extends T>)visitor).visitElem_method(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Equ_dom_methodContext extends AtomContext {
		public TerminalNode EQU() { return getToken(PolicyGrammarParser.EQU, 0); }
		public List<TermdomContext> termdom() {
			return getRuleContexts(TermdomContext.class);
		}
		public TermdomContext termdom(int i) {
			return getRuleContext(TermdomContext.class,i);
		}
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public Equ_dom_methodContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).enterEqu_dom_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).exitEqu_dom_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyGrammarVisitor ) return ((PolicyGrammarVisitor<? extends T>)visitor).visitEqu_dom_method(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Flow_methodContext extends AtomContext {
		public TerminalNode FLOW() { return getToken(PolicyGrammarParser.FLOW, 0); }
		public List<TermctxContext> termctx() {
			return getRuleContexts(TermctxContext.class);
		}
		public TermctxContext termctx(int i) {
			return getRuleContext(TermctxContext.class,i);
		}
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public Flow_methodContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).enterFlow_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).exitFlow_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyGrammarVisitor ) return ((PolicyGrammarVisitor<? extends T>)visitor).visitFlow_method(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Equ_ctx_methodContext extends AtomContext {
		public TerminalNode EQU() { return getToken(PolicyGrammarParser.EQU, 0); }
		public List<TermctxContext> termctx() {
			return getRuleContexts(TermctxContext.class);
		}
		public TermctxContext termctx(int i) {
			return getRuleContext(TermctxContext.class,i);
		}
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public Equ_ctx_methodContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).enterEqu_ctx_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).exitEqu_ctx_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyGrammarVisitor ) return ((PolicyGrammarVisitor<? extends T>)visitor).visitEqu_ctx_method(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Iflow_methodContext extends AtomContext {
		public TerminalNode IFLOW() { return getToken(PolicyGrammarParser.IFLOW, 0); }
		public List<TermctxContext> termctx() {
			return getRuleContexts(TermctxContext.class);
		}
		public TermctxContext termctx(int i) {
			return getRuleContext(TermctxContext.class,i);
		}
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public Iflow_methodContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).enterIflow_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyGrammarListener ) ((PolicyGrammarListener)listener).exitIflow_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyGrammarVisitor ) return ((PolicyGrammarVisitor<? extends T>)visitor).visitIflow_method(this);
			else return visitor.visitChildren(this);
		}
	}
